[package]
name = "ratatui-input"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.28", optional = true }
termion = { version = "4.0.2", optional = true }
termwiz = { version = "0.22", optional = true }

[features]
default = ["crossterm", "termion", "termwiz"]
crossterm = ["dep:crossterm"]
termion = ["dep:termion"]
termwiz = ["dep:termwiz"]
