[package]
name = "ratatui-eventInput"
version = "0.1.1"
edition = "2021"
authors = ["Earthgame_s"]
description = "Unify input from diffrent ratatui backends"
repository = "https://github.com/Earthgames/ratatui-input"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.28", optional = true }
termion = { version = "4.0.2", optional = true }
termwiz = { version = "0.22", optional = true }

[features]
crossterm = ["dep:crossterm"]
termion = ["dep:termion"]
termwiz = ["dep:termwiz"]
